--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ table.routes-table {
 }
 
 .routes-table tr:nth-of-type(2n) td {
-  background-color: #eee;
+  background-color: rgb(234, 234, 234);
 }
 
 select {
